--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5131d540-104a-4fec-9669-9d17d22abb41"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
